Initial generic sketch finalized

--- a/Notes/Kubernetes/Key Concepts/6. Scaling.md
+++ b/Notes/Kubernetes/Key Concepts/6. Scaling.md
@@ -12,6 +12,10 @@
 > Kubernetes API
 > https://v1-18.docs.kubernetes.io/docs/reference/generated/kubernetes-api/v1.18/#-strong-status-operations-pod-v1-core-strong-
 > https://kubernetes.io/docs/reference/kubernetes-api/workload-resources/pod-v1/
+>
+> Setting up minikube: 
+> https://minikube.sigs.k8s.io/docs/start/
+
 
 To run the kubernetes cluster locally start minikube. 
 
@@ -25,30 +29,78 @@ The following command will make the kubernetes api available on port 6000.
 kubectl proxy --port=6000
 ```
 
+Prior to pulling an image a secret has to be created using the kubectl cli
+```
+kubectl create secret docker-registry landauhubkey \
+  --docker-server=docker.io \
+  --docker-username=933970705 \
+  --docker-password=********* \
+  --docker-email=diogo.hewitt.landau@hotmail.com
+```
+
+We can now reference this secret in our deployment body using the 
+```
+imagePullSecrets: 
+- name: landauhubkey
+```
 
 To create a deployment: 
 ```yaml
 POST
 http://localhost:6000/apis/apps/v1/namespaces/default/deployments
 
+HEADER
+Content-Type: application/yaml
+
 BODY
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: test-landau
+  name: delivery-consumer
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: hello-node
+      app: delivery-consumer
   template:
     metadata:
       labels:
-        app: hello-node
+        app: delivery-consumer
     spec:
+      hostAliases: 
+      - ip: "52.213.38.208"
+        hostnames: 
+        - "ip-172-31-7-133.eu-west-1.compute.internal"
+      - ip: "18.202.250.11"
+        hostnames: 
+        - "ip-172-31-32-34.eu-west-1.compute.internal"
+      - ip: "54.171.156.36"
+        hostnames: 
+        - "ip-172-31-8-59.eu-west-1.compute.internal"
+      - ip: "54.76.46.203"
+        hostnames: 
+        - "ip-172-31-30-37.eu-west-1.compute.internal"
+      imagePullSecrets:
+      - name: landauhubkey
       containers:
-      - name: hello-node-image
-        image: k8s.gcr.io/echoserver:1.4
+      - name: generic-consumer
+        image: 933970705/generic-consumer:v1.0.0
+        imagePullPolicy: Always
+        env: 
+        - name: BQ_TABLE
+          value: "delivery_events_temp"
+        - name: IMPORT_PATH
+          value: "contracts.delivery.delivery_events_v7"
+        - name: "IMPORT_OBJECT"
+          value: "DeliveryEventsV7Topic"
+        - name: IGNORE_EVENTS
+          value: "[]"
+        - name: CONSUME_ENV
+          value: "prod"
+        - name: WRITE_ENV
+          value: "uat"
+        - name: GROUP_ID
+          value: "generic_delivery_DE"
 ```
 
 
@@ -90,3 +142,38 @@ BODY
 }
 ```
 	
+	
+	
+To delete a deployment:
+```
+kubectl delete deployments/delivery-consumer
+```
+
+To check for pods resources first we have to enable the metrics api in minikube:
+```
+minikube addons enable metrics-server
+```
+
+Now we can ask for pod resources
+```
+kubectl top pods
+```
+
+
+# ToDo
+
+Checking rolling updates and rollbacks
+
+
+
+# Setting EKS 
+
+> EKS creates an endpoint for the managed Kubernetes API:
+> https://aws.amazon.com/premiumsupport/knowledge-center/eks-public-private-access-api-server/
+
+> might be useful for authenticaiton of the eks cluster:
+> https://kubernetes.io/docs/tasks/administer-cluster/access-cluster-api/
+> https://github.com/kubernetes-client/python
+
+> eks IAM get token
+> https://docs.aws.amazon.com/eks/latest/userguide/managing-auth.html
